fixed placholders text alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,8 +102,9 @@ select:focus {
 }
 
 ::placeholder {
-  padding-left: 75%;
   font-style: italic;
+  text-align: right;
+  padding-right: 2%;
 }
 
 
